Fix crashes on exit (finally!). This was a hard one, but I think I got it right now. Exited/restarted Amarok 5 times now without a crash.

Please test.

BUG: 179400

svn path=/trunk/extragear/multimedia/amarok/; revision=925634